tdf#45949 sw: add spell checking to hyperlinked text

Recognize plain words within hyperlinks and
check their spelling.

Not only URLs and e-mail addresses, but plain
text of hyperlinks were removed from spell checking,
which didn't conform to the specification:

"URLs are skipped during spell checking

Spelling of URLs in document doesn't make sense, because the words
are not separated and often they aren't natural words at all.
Since we can only decide what we know, we will only except URLs
from spelling already recognized/formatted as URLs and if the URL
and the text representation are equal."

http://specs.openoffice.org/appwide/linguistic/Spellcheckdialog.sxw,
see also https://bz.apache.org/ooo/show_bug.cgi?id=40133.

Follow-up to commit ec8fdffec29de7c80da0c2a440e467c35a297119
"tdf#152492 sw: fix unwanted spell checking of parts of URLs"
and commit 2cca160f8bfc4597cf0ad3aaaf0017a5210ea0ec
"tdf#126657, tdf#145104: Don’t set language to none on defined
styles".

Change-Id: If2698c54bcdee0de635abd324173c909d9161a02
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144044
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 71dc8a291ecc5bdae541fce41c8895d6b3302082)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144070
Tested-by: Jenkins